--- a/style.css
+++ b/style.css
@@ -3,11 +3,31 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: #F2F2F2;
 }
 
 body {
-  font-family: Cantarell, "Segoe UI";
+  font-family: Ubuntu, Cantarell, "Segoe UI";
   background-color: #404040;
   margin: 0;
   padding: 0;
+}
+
+/* Books temporary displays */
+.library-shelf {
+  padding: 12px 24px;
+  font-size: 24px;
+}
+
+/* Individual books displays */
+.library-book {
+  padding: 12px 24px;
+  margin: 12px 24px;
+  border: 5px solid orange;
+  border-radius: 12px;
+}
+
+/* Spacing for text clarity */
+p {
+  padding: 4px 0px;
 }
