--- a/style.css
+++ b/style.css
@@ -25,9 +25,27 @@ body {
   margin: 12px 24px;
   border: 5px solid orange;
   border-radius: 12px;
+  background-color: #303030;
 }
 
 /* Spacing for text clarity */
 p {
   padding: 4px 0px;
+}
+
+/* Add book section */
+.add-book {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+
+/* Add book button */
+.add-book-btn {
+  font-size: 24px;
+  font-weight: 600;
+  color: black;
+  padding: 12px 24px;
+  border-radius: 12px;
+  background-color: #1DA1F2;
 }
