Eliminate scroll bar by using minimum spacing values

--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ p {
 
 /* Add book form section */
 .addBookForm {
-  height: 240px;
-  width: 360px;
+  max-height: 350px;
+  max-width: 425px;
   padding: 12px 24px;
   background-color: #404040;
 }
@@ -66,8 +66,9 @@ p {
 /* Form fields container */
 .addBookFields {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 1fr 2fr 1fr 2fr 1fr 2fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 24px;
   background-color: #404040;
 }
 
