--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ input[type=checkbox] {
   height: 24px;
 }
 
+/* Reposition dialog modal */
+dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Books temporary displays */
 .library-shelf {
   padding: 12px 24px;
