--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: Ubuntu, Cantarell, "Segoe UI";
-  background-color: #404040;
+  background-color: #FAF4ED;
   margin: 0;
   padding: 0;
 }
@@ -21,6 +21,8 @@ p {
 /* Input fields defaults */
 input {
   color: black;
+  border-color: lightgray;
+  border-width: 2px;
   border-radius: 8px;
   padding: 12px 6px;
 }
@@ -33,7 +35,8 @@ input[type=checkbox] {
 
 /* Focus status border */
 input:focus {
-  /* border-color: yellow; */
+  border-color: blue;
+  border-width: 2px;
   outline: none;
 }
 
@@ -57,7 +60,7 @@ dialog {
   margin: 12px 24px;
   border: 5px solid orange;
   border-radius: 8px;
-  background-color: #303030;
+  background-color: #F5F5DC;
 }
 
 /* Add book section */
@@ -93,7 +96,7 @@ dialog {
   height: 350px;
   width: 420px;
   padding: 12px 24px;
-  background-color: #404040;
+  background-color: #F5F5DC;
 }
 
 /* Form fields container */
@@ -101,7 +104,7 @@ dialog {
   display: grid;
   grid-template-rows: repeat(3, 1fr) 0.3fr 0.75fr;
   gap: 16px;
-  background-color: #404040;
+  background-color: #F5F5DC;
 }
 
 /* Labels and inputs positioning */
