Blue outline when focused for all input fields

--- a/style.css
+++ b/style.css
@@ -28,9 +28,8 @@ input {
 }
 
 /* Focus status border */
-input:focus {
-  border-color: blue;
-  outline: none;
+input:focus, input[type="checkbox"]:focus {
+  outline: 3px solid blue;
 }
 
 /* Reposition dialog modal */
