--- a/style.css
+++ b/style.css
@@ -79,7 +79,9 @@ dialog {
 
 /* Dialog box element */
 .add-book-dialog {
+  border: 4px solid brown;
   border-radius: 8px;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
 }
 
 /* Add book form section */
