--- a/style.css
+++ b/style.css
@@ -55,6 +55,17 @@ dialog {
   background-color: #F5F5DC;
 }
 
+/* Remove book button */
+.remove-book-btn {
+  padding: 6px 12px;
+  border: none;
+  font-weight: 550;
+  font-size: 16px;
+  border-radius: 4px;
+  color: white;
+  background-color: #C83D2E;
+}
+
 /* Add book section */
 .add-book {
   display: flex;
