--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ dialog {
 
 /* Detach background from the content */
 .page-background {
-  width: 100vw;
-  height: 100vh;
+  width: 99vw;
+  height: 99vh;
   justify-items: center;
 }
 
@@ -88,6 +88,10 @@ dialog {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
+  /* Fixed floating container */
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
 }
 
 /* Add book button */
