--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ dialog {
 
 /* Book card title */
 .library-book-title {
+  display: grid;
+  place-items: center;
   font-size: 18px;
   font-weight: bold;
 }
