Apply box-shadow to the main page content

--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ dialog {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 65vw;
+  /* Temporary background color */
+  background-color: lightgoldenrodyellow;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
 
 /* Individual books cards */
