--- a/style.css
+++ b/style.css
@@ -50,8 +50,12 @@ dialog {
 /* Books cards container */
 .library-shelf {
   display: grid;
+  grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(3, 1fr);
   width: 65vw;
+  /* Use max available screen height */
+  height: 100%;
+  min-height: 100vh;
   /* Temporary background color */
   background-color: lightgoldenrodyellow;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
@@ -68,7 +72,7 @@ dialog {
   border-radius: 8px;
   border: 5px solid orange;
   background-color: #F5F5DC;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
 }
 
 /* Book card title */
