--- a/style.css
+++ b/style.css
@@ -52,12 +52,12 @@ dialog {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(3, 1fr);
+  padding: 0px 24px;
   width: 65vw;
   /* Use max available screen height */
   height: 100%;
   min-height: 100vh;
-  /* Temporary background color */
-  background-color: lightgoldenrodyellow;
+  background-color: #F5F5DC;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
 }
 
@@ -71,7 +71,7 @@ dialog {
   margin: 12px 24px;
   border-radius: 8px;
   border: 5px solid orange;
-  background-color: #F5F5DC;
+  background-color: #F7FFE4;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
 }
 
