--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ dialog {
 /* Detach background from the content */
 .page-background {
   width: 99vw;
-  height: 99vh;
+  height: auto;
+  min-height: 100vh;
   justify-items: center;
 }
 
@@ -55,7 +56,7 @@ dialog {
   padding: 0px 24px;
   width: 65vw;
   /* Use max available screen height */
-  height: 100%;
+  height: auto;
   min-height: 100vh;
   background-color: #F5F5DC;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
