--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
   z-index: 10;
 }
 
+/* Header Odin logo */
+.header-icon {
+  padding-right: 12px;
+  width: 48px;
+}
+
 /* Footer specifics */
 .footer { font-size: 8px; }
 
